feat:inserido gulp

--- a/package.json
+++ b/package.json
@@ -36,5 +36,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-rename": "^2.0.0"
   }
 }
