fix:alteração no icone do card e ajuste na visualização do card

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
+    "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "del": "^7.1.0",
     "gulp": "^4.0.2",
     "gulp-cssmin": "^0.2.0",
     "gulp-imagemin": "^8.0.0",
